--- a/vision_srvs/CMakeLists.txt
+++ b/vision_srvs/CMakeLists.txt
@@ -1,9 +1,35 @@
-PROJECT(vision_msgs)
+cmake_minimum_required(VERSION 2.8.3)
+project(vision_srvs)
 
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-rosbuild_init()
+find_package(catkin REQUIRED COMPONENTS
+  geometry_msgs
+  vision_msgs
+  moveit_msgs
+  message_generation
+)
 
-#rosbuild_genmsg()
-rosbuild_gensrv() 
+## Generate services in the 'srv' folder
+add_service_files(
+  FILES
+  clip_polygon.srv
+  cop_add_collision.srv
+  cop_call.srv
+  cop_get_methods_list.srv
+  cop_get_object_shape.srv
+  cop_save.srv
+  register_jlo_callback.srv
+  srvjlo.srv
+)
+
+## Generate added messages and services with any dependencies listed here
+generate_messages(
+  DEPENDENCIES
+  geometry_msgs
+  vision_msgs
+  moveit_msgs
+)
+
+catkin_package(
+  CATKIN_DEPENDS message_runtime geometry_msgs vision_msgs moveit_msgs
+)
 
