--- a/cogman_msgs/CMakeLists.txt
+++ b/cogman_msgs/CMakeLists.txt
@@ -1,26 +1,35 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(cogman_msgs)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+find_package(catkin REQUIRED COMPONENTS
+  actionlib_msgs
+  geometry_msgs
+  actionlib
+  vision_msgs
+  message_generation
+)
 
-rosbuild_find_ros_package(actionlib_msgs)
-include(${actionlib_msgs_PACKAGE_PATH}/cmake/actionbuild.cmake)
-genaction()
+## Generate actions in the 'action' folder
+add_action_files(
+  FILES
+  ArmHand.action
+  Ptu.action
+  Strings.action
+)
 
-rosbuild_init()
+generate_messages(
+  DEPENDENCIES
+  actionlib_msgs
+  geometry_msgs
+  vision_msgs
+)
 
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-#uncomment if you have defined messages
-rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
+catkin_package(
+  CATKIN_DEPENDS message_runtime actionlib_msgs geometry_msgs vision_msgs
+)
+
