--- a/ias_table_msgs/CMakeLists.txt
+++ b/ias_table_msgs/CMakeLists.txt
@@ -1,6 +1,31 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-rosbuild_init ()
-rosbuild_genmsg()
+cmake_minimum_required(VERSION 2.8.3)
+project(ias_table_msgs)
 
+find_package(catkin REQUIRED COMPONENTS
+  std_msgs
+  geometry_msgs
+  sensor_msgs
+  message_generation
+)
 
+## Generate messages in the 'msg' folder
+add_message_files(
+  FILES
+  PrologReturn.msg
+  TableCluster.msg
+  TableObject.msg
+  TableObjectReconstructed.msg
+  TableWithObjects.msg
+)
+
+## Generate added messages and services with any dependencies listed here
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  geometry_msgs
+  sensor_msgs
+)
+
+catkin_package(
+  CATKIN_DEPENDS message_runtime std_msgs geometry_msgs sensor_msgs
+)
