--- a/triangle_mesh_msgs/CMakeLists.txt
+++ b/triangle_mesh_msgs/CMakeLists.txt
@@ -1,9 +1,28 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-# CMake 2.4.6 doesn't include FindPkgConfig, so we provide our own copy
+cmake_minimum_required(VERSION 2.8.3)
+project(triangle_mesh_msgs)
 
+find_package(catkin REQUIRED COMPONENTS
+  std_msgs
+  geometry_msgs
+  sensor_msgs
+  message_generation
+)
+## Generate messages in the 'msg' folder
+add_message_files(
+  FILES
+  Triangle.msg
+  TriangleMesh.msg
+)
 
-rosbuild_init ()
-rosbuild_genmsg()
- 
+## Generate added messages and services with any dependencies listed here
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+  geometry_msgs
+  sensor_msgs
+)
+
+catkin_package(
+  CATKIN_DEPENDS message_runtime std_msgs geometry_msgs sensor_msgs
+)
 
